fix: fixed logo shifting issue
fixed logo shifting issue

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -34,6 +34,9 @@
             color: $white;
             cursor: pointer;
         }
+        &__disableIcon{
+            color: $navbar;
+        }
     }
     &__optionLogo{
         margin-right: 1rem;
